 * Fixed Ubuntu problem #117226 (bookmarks unification)
 * Fixed problem with right mouse button selection not being precise

New features:
 * Support for tabs
 * Revamped bookmarks dialog
 * Revamped file properties dialog
 * One instance mode
 * User defined LS_COLORS colours
 * Enhanced file name matching in quick search
 * --config-dir command line option for customized location of config files
 * New or updated docs: de, en, es, fr, sl
 * New or updated translations: cs, da, es, eu, fr, hu, ko, nb, pl, ro, ru, sl, uk, zh_CN
 * New key bindings:
      CTRL+T         Open directory in a new tab (replaces the old Multi-Rename-Tool binding)
      CTRL+W         Close current tab
      CTRL+SHIFT+W   Close all tabs
      CTRL+TAB       Switch to the next tab
      CTRL+SHIFT+TAB Switch to the previous tab
      SUPER+1        Change left connection
      SUPER+2        Change right connection


===================================
gnome-commander 1.2.8.10
---------------

Bug fixes:
 * Fixed problem #448941 (numeric keypad arrows don't work in the main window)
 * Fixed problem with toggling path/basename/filename selections in copy/move dialogs
 * Updated translations: de


===================================
gnome-commander 1.2.8.9
---------------

Bug fixes:
 * Fixed problem #352024 (F10 key doesn't work)
 * Fixed problem #631243 (advrename $c(width) regression)

New features:
 * Support for shell-style wildcards in quick search


===================================
gnome-commander 1.2.8.8
---------------

Bug fixes:
 * Fixed problem #610764 (menu item won't stay checked)
 * Fixed problem #626469 (add support for other su-like programs: xdg-su, gnomesu)
 * Fixed problem with broken Spanish translation


===================================
gnome-commander 1.2.8.7
---------------

Bug fixes:
 * Fixed problem #540438 (no GUI message if meld cannot be executed)
 * Fixed problem #616367 ("File not found" dialog after startup)