@@ -7556,6 +7556,9 @@
                             <para>Enhanced file name matching in quick search</para>
                         </listitem>
                         <listitem>
+                            <para>Open terminal with administrator privileges</para>
+                        </listitem>
+                        <listitem>
                             <para>--config-dir command line option for customized location of config files</para>
                         </listitem>
                         <listitem>
